# fire-forecasting-server

./: CMakeLists.txt  README.md  fire-forecasting-server.cpp  fire-forecasting-server.h
server/: CMakeLists.txt  sensorNode.cpp  sensorNode.h  serverNode.cpp  serverNode.h
unitTests/: CMakeLists.txt  unitTests.cpp
